# reqgen

./: README.md  pyproject.toml  reqgen_generate_requirements.py
src/reqgen/: __init__.py  cli.py  mappings.py  scan.py
src/reqgen.egg-info/: PKG-INFO  SOURCES.txt
